--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-es2015-classes": "^6.18.0",
+    "babel-plugin-transform-strict-mode": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "html-inline": "^1.2.0",
     "http-server": "^0.9.0"
   },
   "scripts": {
-    "js": "babel ./src/simple-element.js --plugins transform-es2015-classes --out-file ./demo/simple-element-es5.js",
+    "js": "babel ./src/simple-element.js --presets es2015 --plugins transform-strict-mode --out-file ./demo/simple-element-es5.js",
     "inlinejs": "html-inline -i ./src/simple-element.html -o ./demo/simple-element.html -b demo",
     "build": "npm run js && npm run inlinejs"
   },
